--- a/resolution.tex
+++ b/resolution.tex
@@ -132,7 +132,7 @@ The global mean, climatological components $\langle f_{u} \rangle \, \langle \om
 \label{fig:2panel}
 \end{figure}
 
-\subsection{Vertical Velocities and Convective Precipitation}
+\subsection{Vertical Velocities and Deep Convective Precipitation}
 
 The large increase in magnitude of the upward and downward vertical velocities with resolution may be expected to impact the behavior of other model components. Curiously, there is an excellent negative correlation (Pearson's R-value = 0.99, N = 27) between the global mean, climatological $\langle f_{d} \rangle \, \langle \omega_{d} \rangle$ and a measure of the activity of the \cite{ZM1995AO} deep convection scheme (referred to as the {\em{ZM scheme}} hereafter), global mean, climatological $FREQZM$ (Figure~\ref{fig:corr}). At any given grid-point and time-step, $FREQZM$ is a binary variable: one if the ZM scheme is active, zero if it is not. Time mean $FREQZM$ is therefore the fraction of the model time that the ZM scheme is triggered, i.e., dilute CAPE exceeds $\geq 70$ J/kg. The relationship indicates that model simulations with greater subsidence also have less convective activity.
 
@@ -160,7 +160,7 @@ where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor
 
 The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep tropics. Figure~\ref{fig:4zonal}c shows the climatological, zonal-mean latent heat flux in the simulations, which is expected to contribute positively to the component of dilute CAPE associated with the thermodynamic state of boundary layer parcels \citep{Z2002JGR}. In the deep tropics, latent heat fluxes are small, and the sensitivity parameter is large and negative (Figure~\ref{fig:4zonal}b), consistent with the idea that subsiding motion actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The sensitivity parameter becomes less negative in the deep tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower sensitivity parameter to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution.
 
-Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to the climatological, global mean change in convective precipitation with resolution. This is a reflection of changes in the partitioning of the Intertropical Convergence Zone (ITCZ) between convective and stratiform precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep tropics (except in going from $ne20$ to $ne30$, where deep Tropical convective precipitation rates increase with resolution due to an extremely wide double-ITCZ in the $ne20$ simulation that spans well outside of $\pm 10^{\circ}$ latitude). Expanding the latitude boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occur in this region (again, ignoring $ne30-ne20$; Table~\ref{tbl:table2}). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
+Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to the climatological, global mean change in convective precipitation with resolution. This is a reflection of changes in the partitioning of the Intertropical Convergence Zone (ITCZ) from convective to stratiform precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep tropics (except in going from $ne20$ to $ne30$, where deep tropical convective precipitation rates increase with resolution due to an extremely wide double-ITCZ in the $ne20$ simulation that spans well outside of $\pm 10^{\circ}$ latitude). Expanding the latitude boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occur in this region (again, ignoring $ne30-ne20$; Table~\ref{tbl:table2}). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
 
  \begin{table}
  \caption{Fractional contribution of latitude bands $\pm 10^{\circ}$ and $\pm 15^{\circ}$ to changes in global mean precipitation with resolution. The grid headers refer to differences with respect to the next lowest grid resolution, e.g., $ne30 = ne30-ne20$, $ne40=ne40-ne30$, etc..., and computed through remapping all data to the $ne20$ grid.}
@@ -184,7 +184,7 @@ Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to 
 
 To estimate the dilute CAPE values associated with subsiding motion in the deep tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$, the mass-weighted vertical integral of $\omega$, is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. 
 
-Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep tropics, with resolution. The ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE value computed for mean conditions over the entire deep tropics decrease monotonically with resolution, consistent with the reduction in convective activity with resolution. The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in CAPE for the entire deep tropics, verified by the similar CAPE values derived through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
+Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep tropics, with resolution. The ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE value computed for mean conditions over the entire deep tropics decreases monotonically with resolution, consistent with the reduction in convective activity with resolution. The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in CAPE for the entire deep tropics, verified by the similar CAPE values derived through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
 
 \begin{figure}
 \begin{center}
@@ -206,11 +206,27 @@ Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity 
 
 An experiment is carried out to unravel the contributions of warming and drying to dilute CAPE values of subsiding grid columns. Through computing dilute CAPE using the mean specific humidity of subsiding regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics, one can isolate the role of changes in moisture in subsiding regions on the dilute CAPE calculation, while doing the reverse isolates the influence of changes in temperature. Figure~\ref{fig:profiles}c shows the influence of moisture of subsiding/ascending regions on dilute CAPE, and Figure~\ref{fig:profiles}d the influence of temperature. The first order cause for the reduction of dilute CAPE is clearly do to the reduction (increase) in moisture in subsiding (ascending) region, while temperature has a smaller, second order influence on the dilute CAPE changes. This analysis indicates that the drying of the deep tropics with resolution manifests through an increase in occurrence of subsiding motion with resolution, which reduces the frequency the ZM scheme is active through reducing the frequency the dilute CAPE threshold for convection occurs.
 
-\subsection{Vertical Velocities and the Drizzle Bias}
+\subsection{Vertical Velocities and Shallow Convective Precipitation}
 
-AGCMs are known to suffer from producing too much light rain, or drizzle, relative to observations, predominantly in the subtropics \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation that is less $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% of ZM precipitation in the region between $10^{\circ}-20^{\circ}$ latitude at all resolutions. In this region, there are opposing influences on dilute CAPE, a global maximum in latent heat fluxes (Figure~\ref{fig:4zonal}c) which increases dilute CAPE from below, and abundant subsidence, opposing dilute CAPE from above.
+AGCMs are known to suffer from producing too much light rain, or drizzle, relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation that is less $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the region between $10^{\circ}-20^{\circ}$ latitude at all resolutions. Figure~\ref{fig:transect} shows a snapshot of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, and overlain by an isoline delineating where the ZM mass fluxes are fairly active. The ZM mass fluxes rarely extend above the $800$ hPa level, and often occurs with abundant subsiding motion aloft. In this subtropical region, there are opposing influences on dilute CAPE, a global maximum in latent heat fluxes (Figure~\ref{fig:4zonal}c) which increases dilute CAPE from below, and subsidence, opposing dilute CAPE from above. It seems plausible that these two opposing influences on stability translates into small values of dilute CAPE, but still large enough to trigger the ZM scheme. The ZM scheme, properly a deep convection scheme, is operating as a shallow convection scheme in the subtropics and produces drizzle.
 
-%Poleward of the deep tropics and within the subtropics, the logistic regression indicates that subsidence is a poor predictor of $FREQZM$ (Figure~\ref{fig:4zonal}a,b). The R-value decreases to a local minimum between $15^{\circ} - 20^{\circ}$ latitude, and the magnitude of the sensitivity parameter steeply declines. The local minimum in the R-value corresponds with a local maximum in the latent heat fluxes (Figure~\ref{fig:4zonal}c), indicating that the boundary layer is being driven unstable by large surface latent heat fluxes. The CAPE values in the $10^{\circ} - 15^{\circ}$ latitude region are likely to be small, since the ZM precipitation rate consists primarily of drizzle (Figure~\ref{fig:4zonal}d). The predominance of drizzle in this region is probably a result of the large subsiding motion in the subtropics (not shown) constraining CAPE from becoming too large. AGCMs are known to suffer from an excess drizzle bias in precisely this region \citep{D2006JCLIM}, and this analysis indicates that this bias is due to the use of a CAPE trigger function.
+\begin{figure}
+\begin{center}
+\noindent\includegraphics[width=20pc,angle=0]{figs/temp_transect.png}\\
+\end{center}
+\caption{}
+\label{fig:transect}
+\end{figure}
+
+Figure~\ref{fig:cape-subt} shows the dilute CAPE values computed from mean temperature and moisture of subsiding and ascending regions in the $\pm \left( 10^{\circ}-30^{\circ} \right)$ latitude bands, hereafter referred to as the subtropics. The spread in dilute CAPE between ascending and descending grid columns is much smaller than for the deep tropics (Figure~\ref{fig:cape}a), the dilute CAPE computed from the mean temperature and moisture over the entire subtropics varies much less with resolution compared with the deep tropics ($\sim 20$ J/kg across al resolutions, compared with $\sim 80$ J/kg in the deep tropics). Unlike the deep tropics, the reduction in dilute CAPE with resolution is not from an increase in occurrence of subsiding grid columns, since the space-time weights of ascending/descending motion are generally invariant with resolution (Figure~\ref{fig:cape-subt}b). The decline in dilute CAPE with resolution in the subtropics is a result of a greater magnitude of downward motion, but this sensitivity is not sufficient to suppress the occurrence of drizzling in the subtropics.
+
+\begin{figure}
+\begin{center}
+\noindent\includegraphics[width=20pc,angle=0]{figs/temp_cape-subtropics.pdf}\\
+\end{center}
+\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the subtropics ($\pm \left(10^{\circ}-30^{\circ} \right)$ latitude band), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the subtropics. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
+\label{fig:cape-subt}
+\end{figure}
 
 \subsection{Vertical Velocities and Stratiform Precipitation}
 
@@ -220,17 +236,17 @@ R \approx -\frac{1}{g\rho_{w}} \omega^+ q^+ \label{eq:mflux}
 \end{equation}
 where $\omega^+$ and $q^+$ are the upward vertical pressure velocity and specific humidity at cloud base, respectively, and $\rho_w$ is the density of rainwater. 
 
-Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mflux} was found to be a good approximation to total precipitation rates in a regional model \citep{RETAL2016CD} and in the CAM-SE AGCM with CAM5 physics \citep{OETAL2016JAMES}. Figure~\ref{fig:mflux} shows the moisture flux at the $850$ hPa level conditionally sampled in $1$ mm/day bins of precipitation rate, and separated into the components of total precipitation, stratiform and convective precipitation, in the CAM6 $ne30$ simulation. The figure shows that the increase in precipitation rates with moisture flux is due primarily to the stratiform precipitation rates. The increase in stratiform precipitation rates with resolution is likely due to the increase in magnitude of $\omega$ with resolution.
+Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mflux} was found to be a good approximation to total precipitation rates in a regional model \citep{RETAL2016CD} and in the CAM-SE AGCM with CAM5 physics \citep{OETAL2016JAMES}. Figure~\ref{fig:mflux} shows the median convective, stratiform and total precipitation rates conditioned on the $850$ hPa moisture flux using $1$ mm/day bins, and in the CAM6 $ne30$ simulation. The figure shows that the moisture flux is a good approximation to the median total precipitation rate, and that this increase in precipitation rates with moisture flux is primarily due to stratiform precipitation rates. 
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_mflux.pdf}\\
 \end{center}
-\caption{Precipitation rates vs. upward moisture flux at the 850 hPa level. Solid lines refer to median moisture flux conditioned on the corresponding stratiform (green), convective (blue) and total (magenta) precipitation rates, and shaded regions refer to the conditional interquartile ranges.}
+\caption{Precipitation rates vs. upward moisture flux at the 850 hPa level. Solid lines refer to median stratiform (green), convective (blue) and total (magenta) precipitation rates conditional on bins of the moisture flux, and shaded regions refer to the conditional interquartile ranges.}
 \label{fig:mflux}
 \end{figure}
 
-To unravel the contributions of $\omega$ and $q$ at the 850 hPa level, $\omega_{850}$ and $q_{850}$ to the increase in climatological stratiform precipitation with resolution, the area averaged, climatological stratiform precipitation rate $\overline{R_{s}}$ is decomposed into a time mean magnitude term $M$ and space-time frequency term $f$,
+The increase in stratiform precipitation rates with resolution is likely a due to the increase in magnitude of $\omega$ with resolution. To unravel the contributions of $\omega$ and $q$ at the 850 hPa level, $\omega_{850}$ and $q_{850}$ to the increase in climatological stratiform precipitation with resolution, the area averaged, climatological stratiform precipitation rate $\overline{R_{s}}$ is decomposed into a time mean magnitude term $M$ and space-time frequency term $f$,
 \begin{equation}
 \overline{R_{s}} = \sum_i \sum_j f \left( \omega_i , q_j \right) M \left( \omega_i , q_j \right) \label{eq:pdecomp}
 \end{equation}
