--- a/resolution.tex
+++ b/resolution.tex
@@ -204,11 +204,11 @@ Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity 
 \label{fig:profiles}
 \end{figure}
 
-An experiment is carried out to unravel the contributions of warming and drying to dilute CAPE values of subsiding grid columns. Through computing dilute CAPE using the mean specific humidity of subsiding regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics, one can isolate the role of changes in moisture in subsiding regions on the dilute CAPE calculation, while doing the reverse isolates the influence of changes in temperature. Figure~\ref{fig:profiles}c shows the influence of moisture of subsiding/ascending regions on dilute CAPE, and Figure~\ref{fig:profiles}d the influence of temperature. The first order cause for the reduction of dilute CAPE is clearly do to the reduction (increase) in moisture in subsiding (ascending) region, while temperature has a smaller, second order influence on the dilute CAPE changes. This analysis indicates that the drying of the deep tropics with resolution manifests through an increase in occurrence of subsiding motion with resolution, which reduces the frequency the ZM scheme is active through reducing the frequency the dilute CAPE threshold for convection occurs.
+An experiment is carried out to unravel the contributions of warming and drying to dilute CAPE values of subsiding grid columns. Through computing dilute CAPE using the mean specific humidity of subsiding regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics, one can isolate the role of changes in moisture in subsiding regions on the dilute CAPE calculation, while doing the reverse isolates the influence of changes in temperature. Figure~\ref{fig:profiles}c shows the influence of moisture of subsiding/ascending regions on dilute CAPE, and Figure~\ref{fig:profiles}d the influence of temperature. The first order cause for the reduction of dilute CAPE is clearly do to the decrease (increase) in moisture in subsiding (ascending) regions, while temperature has a smaller, second order influence on the dilute CAPE changes. This analysis indicates that the drying of the deep tropics with resolution manifests through an increase in occurrence of subsiding motion with resolution, which reduces the frequency the ZM scheme is active through reducing the frequency the dilute CAPE threshold for convection occurs.
 
 \subsection{Vertical Velocities and Shallow Convective Precipitation}
 
-AGCMs are known to suffer from producing too much light rain, or drizzle, relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation that is less $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the region between $10^{\circ}-20^{\circ}$ latitude at all resolutions. Figure~\ref{fig:transect} shows a snapshot of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, and overlain by an isoline delineating where the ZM mass fluxes are fairly active. The ZM mass fluxes rarely extend above the $800$ hPa level, and often occurs with abundant subsiding motion aloft. In this subtropical region, there are opposing influences on dilute CAPE, a global maximum in latent heat fluxes (Figure~\ref{fig:4zonal}c) which increases dilute CAPE from below, and subsidence, opposing dilute CAPE from above. It seems plausible that these two opposing influences on stability translates into small values of dilute CAPE, but still large enough to trigger the ZM scheme. The ZM scheme, properly a deep convection scheme, is operating as a shallow convection scheme in the subtropics and produces drizzle.
+AGCMs are known to suffer from producing too much light rain, or drizzle, relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation that is less $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the region between $10^{\circ}-20^{\circ}$ latitude irrespective of resolution. Figure~\ref{fig:transect} shows a snapshot of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, and overlain by an isoline delineating where the ZM mass fluxes are fairly active. The ZM mass fluxes rarely extend above the $800$ hPa level, and often occurs with abundant subsiding motion aloft. In this subtropical region, there are opposing influences on dilute CAPE, a global maximum in latent heat fluxes (Figure~\ref{fig:4zonal}c) which increases dilute CAPE from below, and subsidence, opposing dilute CAPE from above. It seems plausible that these two opposing influences on stability translates into small values of dilute CAPE, but still large enough to trigger the ZM scheme. The ZM scheme, properly a deep convection scheme, is operating as a shallow convection scheme in the subtropics and produces drizzle.
 
 \begin{figure}
 \begin{center}
@@ -234,7 +234,7 @@ In contrast to the impact of vertical motion on the ZM scheme, stratiform precip
 \begin{equation}
 R \approx -\frac{1}{g\rho_{w}} \omega^+ q^+ \label{eq:mflux}
 \end{equation}
-where $\omega^+$ and $q^+$ are the upward vertical pressure velocity and specific humidity at cloud base, respectively, and $\rho_w$ is the density of rainwater. 
+where $\omega^+$ and $q^+$ are the upward $\omega$ and specific humidity at cloud base, respectively, and $\rho_w$ is the density of rainwater. 
 
 Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mflux} was found to be a good approximation to total precipitation rates in a regional model \citep{RETAL2016CD} and in the CAM-SE AGCM with CAM5 physics \citep{OETAL2016JAMES}. Figure~\ref{fig:mflux} shows the median convective, stratiform and total precipitation rates conditioned on the $850$ hPa moisture flux using $1$ mm/day bins, and in the CAM6 $ne30$ simulation. The figure shows that the moisture flux is a good approximation to the median total precipitation rate, and that this increase in precipitation rates with moisture flux is primarily due to stratiform precipitation rates. 
 
@@ -252,7 +252,7 @@ The increase in stratiform precipitation rates with resolution is likely a due t
 \end{equation}
 after \cite{TETAL2018CD}, and the subscript $850$ is dropped from $\omega$ and $q$ for brevity. 
 
-Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution. Figure~\ref{fig:pdecomp} is a plot of the terms $M\left( \omega_i , q_j \right)$ and $f\left( \omega_i , q_j \right) \times M\left( \omega_i , q_j \right)$ for all resolutions, and in the $\pm 15^{\circ}$ latitude region. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. Larger $\omega$ values correspond to larger magnitude stratiform precipitation rates, which have larger space-time frequencies $f\left( \omega_i , q_j \right)$ at higher resolutions, explaining the increase in $\overline{R_{s}}$ with resolution in Table~\ref{tbl:table2}. Changes in the space-time frequency of the $q$ field contributes comparatively less to changes in stratiform precipitation.
+Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution. And so Figure~\ref{fig:pdecomp} is a plot of the terms $M\left( \omega_i , q_j \right)$ and $f\left( \omega_i , q_j \right) \times M\left( \omega_i , q_j \right)$ for all resolutions, in the $\pm 15^{\circ}$ latitude region. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. Larger $\omega$ values correspond to larger magnitude stratiform precipitation rates, of which have larger space-time frequencies $f\left( \omega_i , q_j \right)$ at higher resolutions, increasingly contributing to the increase in $\overline{R_{s}}$ with resolution. Changes in the space-time frequency of the $q$ field contributes comparatively much less to changes in stratiform precipitation, and so the increase in global mean stratiform precipitation with resolution is primarily a result of the increase in magnitude of $\omega$ with resolution.
 
 \begin{figure}
 \begin{center}
