--- a/resolution.tex
+++ b/resolution.tex
@@ -212,7 +212,7 @@ AGCMs are known to suffer from producing too much light rain, or drizzle, relati
 
 \begin{figure}
 \begin{center}
-\noindent\includegraphics[width=20pc,angle=0]{figs/temp_transect.png}\\
+\noindent\includegraphics[width=20pc,angle=0]{figs/temp_trans.pdf}\\
 \end{center}
 \caption{}
 \label{fig:transect}
