--- a/resolution.tex
+++ b/resolution.tex
@@ -250,13 +250,13 @@ Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mf
 \label{fig:mflux}
 \end{figure}
 
-The increase in stratiform precipitation rates with resolution is likely due to the increase in magnitude of $\omega$ with resolution. To unravel the contributions of $\omega$ and $q$ at the 850 hPa level, $\omega_{850}$ and $q_{850}$ to the increase in climatological stratiform precipitation with resolution, the area averaged, climatological stratiform precipitation rate $\overline{R_{s}}$ can be decomposed into a double sum of the product of the time mean magnitude term $M_s$ and time mean spatial frequency term $f_s$, over $\omega_{850}$ and $q_{850}$ space,
+The increase in stratiform precipitation rates with resolution is likely due to the increase in magnitude of $\omega$ with resolution. To unravel the contributions of $\omega$ and $q$ at the 850 hPa level, $\omega_{850}$ and $q_{850}$ to the increase in climatological stratiform precipitation with resolution, the area averaged, climatological stratiform precipitation rate $\overline{R_{s}}$ can be decomposed into a double sum of the product of the time mean magnitude $M_s$ and time mean spatial frequency $f_s$, over $\omega_{850}$ and $q_{850}$ space,
 \begin{equation}
-\overline{R_{s}} = \sum_i \sum_j f \left( \omega_i , q_j \right) M \left( \omega_i , q_j \right) \label{eq:pdecomp}
+\overline{R_{s}} = \sum_i \sum_j f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right) \label{eq:pdecomp}
 \end{equation}
 after \cite{TETAL2018CD}, and the subscript $850$ is dropped from $\omega$ and $q$ for brevity. 
 
-Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution, and so $\overline{R_s}$ is defined as the mean over the $\pm 15^{\circ}$ latitude region. Figure~\ref{fig:pdecomp} is a plot of the terms $M_s \left( \omega_i , q_j \right)$ and $f_s \left( \omega_i , q_j \right) M\left( \omega_i , q_j \right)$ for all resolutions, in the $\pm 15^{\circ}$ latitude region. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f_s \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. The $M_s$ plots show that larger $\omega$ values correspond to larger magnitude time-mean stratiform precipitation rates, and these larger precipitation rates are associated with larger spatial frequencies $f_s \left( \omega_i , q_j \right)$ at higher resolutions, increasingly contributing to the increase in $\overline{R_{s}}$ with resolution. Changes to the time mean spatial frequency of the $q$ field contributes comparatively much less to changes in stratiform precipitation, and so the increase in global mean stratiform precipitation with resolution is primarily a result of the increase in magnitude of $\omega$ with resolution.
+Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution, and so $\overline{R_s}$ is defined as the mean over the $\pm 15^{\circ}$ latitude region. Figure~\ref{fig:pdecomp} is a plot of the terms $M_s \left( \omega_i , q_j \right)$ and $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ for all resolutions, in the $\pm 15^{\circ}$ latitude region. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f_s \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. The $M_s$ plots show that larger magnitude $\omega_{850}$ correspond to larger magnitude time-mean stratiform precipitation rates, and these larger precipitation rates are associated with larger spatial frequencies $f_s \left( \omega_i , q_j \right)$ at higher resolutions. These large magnitude stratiform precipitation rates increasingly contribute to the increase in $\overline{R_{s}}$ with resolution, as seen by the expansion of $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ to include larger magnitude $\omega_{850}$. Changes to the time mean spatial frequency of the $q_{850}$ field contributes comparatively much less to changes in stratiform precipitation.
 
 \begin{figure}
 \begin{center}
